--- a/css/mediaMyPhone.css
+++ b/css/mediaMyPhone.css
@@ -1,6 +1,6 @@
 /*--------Адаптив главной--------*/
 
-@media(min-width: 321px) and (max-width: 667px){
+@media(min-width: 321px) and (max-width: 375px){
 
 body {
 	width: 100%;
@@ -90,11 +90,12 @@ table{
 	visibility: visible;
     display: block;
 	
-	text-align: justify;
+	text-align: center;
 	font-weight: 400;
 	width: 311px;
 	line-height: 1;
 	padding-top: 6px;
+	padding-left: 52px;
 }
 
 .header_text_image{
@@ -150,38 +151,38 @@ a:active {
 .menu-main:active{
 	color: red;
 }
-/* #top a:active{ */
-	/* text-decoration: underline; */
-	/* border-bottom: 1px solid currentColor; /* Параметры линии под текстом */ 
-    /* font-weight: normal; /* Убираем жирное начертание */
-    /* padding-bottom: 1px; /* Расстояние от текста до линии */ 
-	
-	/* font-weight: 600; */
-/* } */
-.top {
-	display: block;
-	padding: 20px 0;	
-	color: #000000;	
-	text-decoration: none;
-}
-.top_{
-	display: block;
-    padding: 20px 0;
-    color: #997A90;
-    text-decoration: none;
-    font-weight: 700;
-    background: 0 0;
-    background: -moz-linear-gradient(top,rgba(0,0,0,0) 0,#000 100%);
-    background: -webkit-linear-gradient(top,rgba(0,0,0,0) 0,#000 100%);
-    background: -o-linear-gradient(top,rgba(0,0,0,0) 0,#000 100%);
-    background: -ms-linear-gradient(top,rgba(0,0,0,0) 0,#000 100%);
-    background: linear-gradient(to bottom,rgba(0,0,0,0) 0,#000 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=transparent, endColorstr=#000, GradientType=0);
-    background-repeat: repeat-x;
-    background-position: 0 65%;
-    background-size: 1px 1px;
-}
 
+/* .top { */
+	/* display: block; */
+	/* padding: 20px 0;	 */
+	/* color: #000000;	 */
+	/* text-decoration: none; */
+/* } */
+/* .top_{ */
+	/* display: block; */
+    /* padding: 20px 0; */
+    /* color: #997A90; */
+    /* text-decoration: none; */
+    /* font-weight: 700; */
+    /* background: 0 0; */
+    /* background: -moz-linear-gradient(top,rgba(0,0,0,0) 0,#000 100%); */
+    /* background: -webkit-linear-gradient(top,rgba(0,0,0,0) 0,#000 100%); */
+    /* background: -o-linear-gradient(top,rgba(0,0,0,0) 0,#000 100%); */
+    /* background: -ms-linear-gradient(top,rgba(0,0,0,0) 0,#000 100%); */
+    /* background: linear-gradient(to bottom,rgba(0,0,0,0) 0,#000 100%); */
+    /* filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=transparent, endColorstr=#000, GradientType=0); */
+    /* background-repeat: repeat-x; */
+    /* background-position: 0 65%; */
+    /* background-size: 1px 1px; */
+/* } */
+
+/* .top:hover { */
+	/* color: #754e6a;	 */
+	/* text-decoration: none; */
+/* } */
+
+
+/*-----------------------------------------Гамбургер меню--------------------------*/
 .top1_mediaMyPhone{
 	display: block;
 	/* padding: 20px 0; */
@@ -189,30 +190,27 @@ a:active {
 	text-decoration: none;
 	
 	display: block;
-	padding: 6px 18px;
+	padding: 8px 18px;
+	margin-left: 8px;
 
-  font-size: 20px;
-  font-weight: 200;
+	font-size: 24px;
+	font-weight: 400;
 
-  transition-duration: .25s;
-}
-.top:hover {
-	color: #754e6a;	
-	text-decoration: none;
+	transition-duration: .25s;
 }
 
 .sub-menu_mediaMyPhone{
 	width: 310px;
-	height: 146px;
+	height: 160px;
 	
 	font-size: 15px;
 	text-align: left;
-	line-height: 1.2;
-	top: 40%;
-	left: 5%;
+	line-height: 1.3;
+	top: 34%;
+	left: -37%;
 	right: 10%;
 	border-radius: 2px;
-    /* display: none; */
+    display: none;
     position: absolute;
     background-color: #fff;
     min-width: 160px;
@@ -224,8 +222,8 @@ a:active {
 	content: "";
 	position: absolute;
 	z-index: 5;
-	left: 38%;
-	top: 30%;
+	left: 27%;
+	top: 31%;
 	width: 0;
 	height: 0;
 	border: 100px solid;
@@ -235,52 +233,78 @@ a:active {
 	transform: translate(-50%);
 	opacity: 1;
 	transition: .3s;
-	/* display: none; */
+	display: none;
 }
 
 /* Links inside the dropdown */
 .sub-menu_mediaMyPhone a{
     color: black;
 	
-	margin-top: 12px;
+	margin-top: 13px;
     padding: 0px 16px;
     text-decoration: none;
     display: block;
 }
 /* Show the dropdown menu on hover */
-.top1_mediaMyPhone:hover .sub-menu_mediaMyPhone {display: block; transition: .3s;}
-.top1_mediaMyPhone:hover .sub-menu1_mediaMyPhone {display: block;}
+.top1_mediaMyPhone:hover .sub-menu_mediaMyPhone {display: block; transition: .3s; color: #ebe2e8;}
+.top1_mediaMyPhone:hover .sub-menu1_mediaMyPhone {display: block; color: #ebe2e8;} 
 .sub-menu_mediaMyPhone:active{
     color: #ebe2e8;
 }
+
+#menu__t {
+  opacity: 0;
+}
+
+#menu__t:checked ~ .menu__box {
+  visibility: visible;
+  right: 0;
+}
+
+.menu_b {
+  display: flex;
+  align-items: center;
+  position: fixed;
+  top: 14px;
+  right: 15px;
+
+  cursor: pointer;
+  z-index: 1;
+  
+    visibility: hidden;
+}
+
+.menu__b {
+  display: flex;
+  align-items: center;
+  position: fixed;
+  top: 12px;
+  right: 13px;
+
+  width: 26px;
+  height: 26px;
+
+  cursor: pointer;
+  z-index: 100000;
+}
+
 
 
 #menu__toggle {
   opacity: 0;
 }
 
-#menu__toggle:checked ~ .menu__btn > span {
-  transform: rotate(45deg);
-}
-#menu__toggle:checked ~ .menu__btn > span::before {
-  top: 0;
-  transform: rotate(0);
-}
-#menu__toggle:checked ~ .menu__btn > span::after {
-  top: 0;
-  transform: rotate(90deg);
-}
 #menu__toggle:checked ~ .menu__box {
   visibility: visible;
-  left: 0;
+  right: 0;
 }
 
 .menu_btn {
   display: flex;
   align-items: center;
   position: fixed;
-  top: 65px;
-  right: 13px;
+  top: 56px;
+  right: 8px;
 
   cursor: pointer;
   z-index: 1;
@@ -290,50 +314,29 @@ a:active {
   display: flex;
   align-items: center;
   position: fixed;
-  top: 70px;
-  right: 20px;
+  top: 67px;
+  right: 18px;
 
   width: 26px;
   height: 26px;
 
   cursor: pointer;
-  z-index: 1;
+  z-index: 100000;
 }
 
-.menu__btn > span,
-.menu__btn > span::before,
-.menu__btn > span::after {
-  display: block;
-  position: absolute;
-
-  width: 90%;
-  height: 2px;
-
-  background-color: #fff;
-
-  transition-duration: .25s;
-}
-.menu__btn > span::before {
-  content: '';
-  top: -6px;
-}
-.menu__btn > span::after {
-  content: '';
-  top: 6px;
-}
 
 .menu__box {
   display: block;
   position: fixed;
   visibility: hidden;
   top: 0;
-  left: -100%;
+  right: 0;
 
-  width: 300px;
+  width: 245px;
   height: 100%;
 
   margin: 0;
-  padding: 80px 0;
+  padding: 46px 0;
 
   list-style: none;
 
@@ -346,18 +349,69 @@ a:active {
 
 .menu__item {
   display: block;
-  padding: 12px 18px;
+  padding: 8px 17px;
+  margin-left: 8px;
 
   color: #ffffff;
 
-  font-size: 20px;
-  font-weight: 200;
+  font-size: 24px;
+  font-weight: 400;
 
   text-decoration: none;
 
   transition-duration: .25s;
 }
+.menu__item:hover {
+	color: ##997a90;
+}
 
+.menu__box_img_close{
+	/* visibility: visible; */
+  /* visibility: hidden; */
+  
+  /* display: block; */
+  /* position: fixed; */
+  /* top: 0; */
+  /* right: 0; */
+
+  /* margin: 0; */
+  padding: 15px 15px;
+
+  /* list-style: none; */
+
+  /* transition-duration: .25s; */
+  /* z-index: 10000; */
+  
+    display: flex;
+  align-items: center;
+  position: fixed;
+  top: 0px;
+  right: 0px;
+
+  cursor: pointer;
+  z-index: 1;
+}
+
+.menu__box_icon1{
+	display: block;
+	position: fixed;
+	bottom: 10px;
+	padding-left: 20px;
+}
+
+.menu__box_icon2{
+	display: block;
+	position: fixed;
+	bottom: 10px;
+	padding-left: 60px;
+}
+
+.menu__box_icon3{
+	display: block;
+	position: fixed;
+	bottom: 10px;
+	padding-left: 100px;
+}
 /*-----------------------------------------Полоска при скролле--------------------------*/
 
 /* Style the header: fixed position (always stay at the top) */
