--- a/css/style.css
+++ b/css/style.css
@@ -273,6 +273,11 @@ a:active {
 
 
 /*-----------------------------------------Гамбургер меню--------------------------*/
+	
+.hamburger-menu{
+	visibility: hidden;
+    display: none;
+}
 .top1_mediaMyPhone{
 	display: block;
 	/* padding: 20px 0; */
@@ -528,10 +533,6 @@ a:active {
 	width: 0%;
 }
 
-
-
-
-
 /*-----------------------------------------Полоска при скролле--------------------------*/
 
 /* Style the header: fixed position (always stay at the top) */
@@ -749,6 +750,7 @@ input:focus{
 }
 
 .button2:hover{
+	cursor: pointer;
 	color: #754e6a;
 	background:#d6c0cf;
 	box-shadow: inset 0 0 0 1px #ffffff;
@@ -998,7 +1000,7 @@ input:focus{
 	text-decoration: none; /* Отменяем подчеркивание у ссылки */
 }
 
-.button1:hover{
+.button1:hover{ 
 	color: #754e6a;
 	background:#d6c0cf;
 	box-shadow: inset 0 0 0 1px #ffffff;
