--- a/css/mediaMyPhone.css
+++ b/css/mediaMyPhone.css
@@ -1,6 +1,6 @@
 /*--------Адаптив главной--------*/
 
-@media(min-width: 321px) and (max-width: 375px){
+@media(min-width: 321px) and (max-width: 400px){
 
 body {
 	width: 100%;
@@ -51,10 +51,6 @@ hr{
 	border: 0;
 
 	background-color: #e5e5e5;
-}
-
-a:active {
-  color: red;
 }
 /*-----------------------------------------Header-----------------------------------------*/
 
@@ -131,9 +127,11 @@ a:active {
 	visibility: visible;
     display: block;
 }
-
+.podmenu{
+	display: none;
+	 z-index: 10001;
+}
 .top1_mediaMyPhone{
-	display: block;
 	/* padding: 20px 0; */
 	color: #fff;	
 	text-decoration: none;
@@ -146,6 +144,8 @@ a:active {
 	font-weight: 400;
 
 	transition-duration: .25s;
+	
+	display: block; 
 }
 
 .sub-menu_mediaMyPhone{
@@ -155,16 +155,17 @@ a:active {
 	font-size: 15px;
 	text-align: left;
 	line-height: 1.3;
-	top: 34%;
+	top: 35%;
 	left: -37%;
 	right: 10%;
 	border-radius: 2px;
-    display: none;
     position: absolute;
     background-color: #fff;
     min-width: 160px;
     box-shadow: 0px 3px 8px 1px rgba(0,0,0,0.2);
     z-index: 10001;
+	
+	display: block; 
 }
 
 .sub-menu1_mediaMyPhone{
@@ -172,7 +173,7 @@ a:active {
 	position: absolute;
 	z-index: 5;
 	left: 27%;
-	top: 31%;
+	top: 32%;
 	width: 0;
 	height: 0;
 	border: 100px solid;
@@ -182,28 +183,20 @@ a:active {
 	transform: translate(-50%);
 	opacity: 1;
 	transition: .3s;
-	display: none;
 }
 
 /* Links inside the dropdown */
-.sub-menu_mediaMyPhone a{
-    color: black;
+/* .sub-menu_mediaMyPhone a{ */
+    /* color: black; */
 	
-	margin-top: 13px;
-    padding: 0px 16px;
-    text-decoration: none;
-    /* display: block; */
-}
+	/* margin-top: 13px; */
+    /* padding: 0px 16px; */
+    /* text-decoration: none; */
+/* } */
 
-.top1_mediaMyPhone:focus ~ .sub-menu_mediaMyPhone, 
-.top1_mediaMyPhone:active ~ .sub-menu_mediaMyPhone, 
-.sub-menu_mediaMyPhone:hover 
-{ 
-   display: block; 
-} 
-.top1_mediaMyPhone:focus ~ .sub-menu1_mediaMyPhone, 
-.top1_mediaMyPhone:active ~ .sub-menu1_mediaMyPhone, 
-.sub-menu1_mediaMyPhone:hover 
+.top1_mediaMyPhone:focus ~ .podmenu, 
+.top1_mediaMyPhone:active ~ .podmenu, 
+.podmenu:hover 
 { 
    display: block; 
 } 
@@ -960,7 +953,8 @@ input:required{
 /*--------Мое лого--------*/
 .img_ma_phone{
 	padding-top: 20px;
-	padding-left: 240px;
+	padding-left: 250px;
+	  text-decoration: none;
 }
 /*--------Контакты--------*/
 .TheMainThing_footer_phone1{
@@ -1064,5 +1058,217 @@ input:required{
 
 }
 
-@media(min-width: 320) and (max-width: 480){
+/*--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+/*--------------------------------------Страница Фото--------------------------------------*/
+
+/*---------Таблица фото: HOME И GR-------------*/
+.photo_table{
+	padding-top: 90px;
+	width: 100%;
+}
+
+.photo_table_2{
+	/* border-spacing: 50px; */
+}
+/*----------------------*/
+.photo_table_home{
+	position: relative;
+	width: 100%;
+	
+	height: 400px;
+	width: 584px;
+	
+	display: inline-block; /* Строчно-блочный элемент */
+    overflow: hidden; /* Скрываем всё за контуром */
+	
+	border-right: 25px solid #fff; 
+}
+
+.photo_table_home img {
+    transition: 1s; /* Время эффекта */
+    display: block; /* Убираем небольшой отступ снизу */
+}
+
+.photo_table_home img:hover {
+    transform: scale(1); /* Увеличиваем масштаб */
+}
+   
+.photo_table_home .photo_table_home_bg{
+	position: absolute;
+	background: #fdeef8a6;
+	width: 100%;
+	height: 100%;
+	transition: .20s;
+	
+	top: 0px;
+}
+
+.photo_table_home:hover .photo_table_home_bg{
+	background: #f9edf573;
+}
+
+
+.home_text{
+	position: absolute;
+	
+	font-size: 40px;
+	color: #754e6a;
+	font-weight: 800;
+	text-align: center;
+	
+	top: 171px;
+	width: 100%;
+	z-index: 1000;
+}
+
+/*----------------------*/
+.photo_table_gr{
+	position: relative;
+	
+	height: 400px;
+	width: 584px;
+	
+	padding-right: 10px;
+	
+	display: inline-block; /* Строчно-блочный элемент */
+    overflow: hidden; /* Скрываем всё за контуром */
+	
+	border-left: 25px solid #fff
+}
+
+.photo_table_gr img {
+    transition: 3s; /* Время эффекта */
+    display: block; /* Убираем небольшой отступ снизу */
+}
+
+.photo_table_gr img:hover {
+    transform: scale(1); /* Увеличиваем масштаб */
+}
+
+.photo_table_gr .photo_table_gr_bg{
+	position: absolute;
+	background: #fdeef8a6;
+	width: 100%;
+	height: 100%;
+	transition: .20s;
+	
+	top: 0px;
+}
+
+.photo_table_gr:hover .photo_table_gr_bg{
+	background: #f9edf573;
+}
+
+.gr_text{
+	position: absolute;
+	
+	line-height: 1.2;
+	font-size: 40px;
+	color: #754e6a;
+	font-weight: 800;
+	text-align: center;
+	
+	top: 161px;
+	width: 100%;
+	z-index: 1000;
+}
+
+/*---------Подвал страницы фото-------------*/
+.footer_photo{
+	position: relative;
+	background: url("../img/footer1.png");
+	height: 310px;
+	top: 60px;
+	color: #fff;
+	/* padding-left: 32%; */
+	text-align: left;
+	font-weight: 400;
+}
+/*---------Черный подвал страницы фото-------------*/
+.black_footer_photo{
+	position: relative;
+	background: black;
+	height: 92px;
+	top: 60px;
+	bottom: 0;
+	font-size: 16px;
+	color: #fff;
+	padding-left: 40px;
+	padding-top: 38px;
+}
+
+/*--------------------------------------Страница Фото Дома--------------------------------------*/
+
+.photo_dom_table{
+	padding-top: 80px;
+	width: 100%;
+}
+/*----------------------*/
+
+.photo_dom_1{
+	position: relative;
+	width: 100%;
+	
+	height: 395px;
+	width: 395px;
+	
+	display: inline-block; /* Строчно-блочный элемент */
+    overflow: hidden; /* Скрываем всё за контуром */
+	
+	border-right: 35px solid #fff;
+	border-bottom: 35px solid #fff;
+}
+.photo_dom_2{
+	position: relative;
+	width: 100%;
+	
+	height: 395px;
+	width: 400px;
+	
+	display: inline-block; /* Строчно-блочный элемент */
+    overflow: hidden; /* Скрываем всё за контуром */
+	
+	border-left: 20px solid #fff;
+	border-right: 20px solid #fff;
+	border-bottom: 35px solid #fff;
+}
+/* .pdt{ */
+	/* border-bottom: 35px solid #fff; */
+/* } */
+.photo_dom_3{
+	position: relative;
+	width: 100%;
+	
+	height: 395px;
+	width: 395px;
+	
+	display: inline-block; /* Строчно-блочный элемент */
+    overflow: hidden; /* Скрываем всё за контуром */
+	
+	border-left: 35px solid #fff;
+	border-bottom: 35px solid #fff;
+}
+
+/*---------Подвал страницы фото дома-------------*/
+.footer_photo_dom{
+	position: relative;
+	background: url("../img/footer1.png");
+	height: 310px;
+	top: 30px;
+	color: #fff;
+	/* padding-left: 32%; */
+	text-align: left;
+	font-weight: 400;
+}
+/*---------Черный подвал страницы фото-------------*/
+.black_footer_photo_dom{
+	position: relative;
+	background: black;
+	height: 92px;
+	top: 30px;
+	bottom: 0;
+	font-size: 16px;
+	color: #fff;
+	padding-left: 40px;
+	padding-top: 38px;
 }
