--- a/css/style.css
+++ b/css/style.css
@@ -268,14 +268,18 @@ hr{
 
 
 /*-----------------------------------------Гамбургер меню--------------------------*/
-	
+
+.podmenu{
+	display: none;
+	 z-index: 10001;
+}
 .hamburger-menu{
 	visibility: hidden;
     display: none;
 }
 .top1_mediaMyPhone{
 	display: block;
-	/* padding: 20px 0; */
+	
 	color: #fff;	
 	text-decoration: none;
 	
@@ -296,11 +300,10 @@ hr{
 	font-size: 15px;
 	text-align: left;
 	line-height: 1.3;
-	top: 34%;
+	top: 30.9%;
 	left: -37%;
 	right: 10%;
 	border-radius: 2px;
-    display: none;
     position: absolute;
     background-color: #fff;
     min-width: 160px;
@@ -313,7 +316,7 @@ hr{
 	position: absolute;
 	z-index: 5;
 	left: 27%;
-	top: 31%;
+	top: 28%;
 	width: 0;
 	height: 0;
 	border: 100px solid;
@@ -323,7 +326,6 @@ hr{
 	transform: translate(-50%);
 	opacity: 1;
 	transition: .3s;
-	display: none;
 }
 
 /* Links inside the dropdown */
